# aous

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
crates/asset_io/: Cargo.toml  build.rs
crates/asset_io/src/: lib.rs  plugin.rs
crates/config/: Cargo.toml
src/: ant_eaters.rs  ant_hill.rs  ants.rs  camera.rs  food.rs  game_state.rs  main.rs  splash.rs  terrain_spawner.rs  ui.rs
wasm/: index.html
