[package]
name = "aous"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_sprite2",
  "bevy_render2",
  "bevy_pbr2",
  "bevy_winit",
  "x11",
] }
bevy_render2 = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [ "png" ] }
bracket-noise = "0.8"
# bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast" }
rand = "0.8"
# bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-pipelined" }
bevy_egui = { git = "https://github.com/mockersf/bevy_egui", branch = "bevy-pipelined-updated", version = "0.8", default-features = false }

config = { path = "crates/config" }
asset_io = { path = "crates/asset_io" }


[features]
default = []
trace = ["bevy/trace", "bevy/trace_tracy"]

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/*",
]
