[package]
name = "aous"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_winit",
  "x11",
  "png"
] }
bracket-noise = "0.8"
rand = "0.8"
# bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-pipelined" }
bevy_egui = { git = "https://github.com/mockersf/bevy_egui", branch = "bevy-pipelined-updated", version = "0.8", default-features = false }
bevy_embedded_assets = { git = "https://github.com/vleue/embedded_assets", version = "0.2.0-dev" }

config = { path = "crates/config" }


[features]
default = []
trace = ["bevy/trace", "bevy/trace_tracy"]

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/*",
]
