[package]
name = "aous"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_winit",
  "x11",
  "png"
] }
bracket-noise = "0.8"
rand = "0.8"
bevy_egui = { version = "0.10", default-features = false }
bevy_embedded_assets = "0.2.0"

config = { path = "crates/config" }

[patch]

[features]
default = []
trace = ["bevy/trace", "bevy/trace_tracy"]

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/*",
]
